force-app/main/default/objects/Policy_Notification__c/Policy_Notification__c.object-meta.xml
<CustomObject>
    <label>Policy Notification</label>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Policy Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>