force-app/main/default/objects/Policy_Notification__c/fields/Date_Policy_Read__c.field-meta.xml
<CustomField>
    <fullName>Date_Policy_Read__c</fullName>
    <label>Date Policy Read</label>
    <type>Date</type>
</CustomField>