force-app/main/default/objects/Policy_Notification__c/fields/Last_Notified__c.field-meta.xml
<CustomField>
    <fullName>Last_Notified__c</fullName>
    <label>Last Notified</label>
    <type>DateTime</type>
</CustomField>