force-app/main/default/objects/Policy_Notification__c/fields/Policy_Read__c.field-meta.xml
<CustomField>
    <fullName>Policy_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Read</label>
    <type>Checkbox</type>
</CustomField>