force-app/main/default/objects/Policy_Notification__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Policy Version</label>
    <referenceTo>Policy_Version__c</referenceTo>
    <relationshipLabel>Notified Users</relationshipLabel>
    <relationshipName>Notified_Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>