force-app/main/default/objects/Policy_Notification__c/fields/Send_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>