force-app/main/default/objects/Policy_Notification__c/fields/Transient_Message__c.field-meta.xml
<CustomField>
    <fullName>Transient_Message__c</fullName>
    <description>The message will be deleted after email has been sent to users during policy distribution.</description>
    <inlineHelpText>The message will be deleted after email has been sent to users during policy distribution.</inlineHelpText>
    <label>Add a note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>