force-app/main/default/objects/Policy_Notification__c/validationRules/Owner_Cannot_Be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Cannot_Be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(OwnerId)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Owner cannot be changed</errorMessage>
</ValidationRule>